# quadrotor_sim

./: .gitignore  A_calc.m  B_calc.m  JN_func.m  J_func.m  Jk_func.m  LPFilter.m  NLP_solve.m  QR_init.m  README.md  animation_script.m  backward_pass.m  brute_force.asv  brute_force.m  circle_grp_drone1.csv  circle_grp_drone2.csv  circle_grp_drone3.csv  circle_grp_drone4.csv  con2D_gen.m  dF_br_func.m  del_u_update.m  delt_data.mat  delt_topt_data.mat  df_calc.m  df_main.m  df_pure.m  direct_motor_control.m  dyn_old.m  dynamics_linearizer.m  ellipse_plot.m  f_calc.m  forward_pass.m  fp_La_upd.m  fp_con_upd.m  fp_dyn_upd.m  fp_mud_upd.m  frame_builder.asv  g_func.m  gate_con.m  gate_con_u.m  (+97 more)
LQR/: A_calc.m  B_calc.m  H1_calc.m  H2_calc.m  H3_calc.m  H4_calc.m  H5_calc.m  H6_calc.m
adams_stuff/: calc_peturb_quat.m  get_aligned_bounding_box.m  get_angled_bounding_box.m  init_camera.m  mean_err.m  plot_camera.m  post_process_particle_filter.m  post_process_yukf.m  predict_quad_bounding_box.m  quat_dist.m  test_bounding_box_code.m  yolo_ukf.m
constraints/: con2D.m  model_init.m  quad2D.m
control/: traj_init.m
controllers/: A_const.mat  B_const.mat  controller.m  dynamics_linearizer.m  fbc.m  ilqr.m  ilqr_bp.m  ilqr_bp.m~  ilqr_fp.m  ilqr_fp_old.m  ilqr_init.m  wrench2m_controller.m  wrench2motor.m
dynamics/: dyn_init.asv  dyn_init.m  model_init.asv  model_init.m  model_init_sysID.asv  model_init_sysID.m
filters/: UT.m  cross_cov.m  ekf.m  iekf.m  invUT.m  invUT.m~  iukf.m  mpc.m  ukf.m  ukf2.m  ukf2.m~
flight/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/install/share/bridge_px4/: package.xml
flight/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/src/bridge_px4/: CMakeLists.txt
flight/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/src/bridge_px4/include/bridge_px4/: visibility_control.h
flight/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/src/bridge_px4/m/+ros/+internal/+ros/+custommessages/+bridge_px4/: trajTransferResponse.m
flight/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/src/bridge_px4/m/+ros/+msggen/+bridge_px4/: TrajTransferRequest.m
flight/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/src/bridge_px4/src/: bridge_px4_TrajTransferRequest_common.cpp  bridge_px4_TrajTransferResponse_common.cpp  bridge_px4_TrajTransfer_service.cpp  bridge_px4_msg_TrajTransferResponse_publisher.cpp  bridge_px4_msg_TrajTransferResponse_subscriber.cpp  bridge_px4_srv_TrajTransfer_client.cpp
generators/: ms_traj_gen.m  obj_gen.m  param_gen.m  quad_gen.m
initialization/: al_init.m  df_init.m  dyn_func_init.m  dyn_init.m  dyn_lin_init.m  fc_init.m  fc_init.m~  flight_init.m  ilqr_init.m  logger_init.m  model_init.m  nudge_init.m  obj_init.m  obj_init_qual.m  old_model_init.m  precompute.m  qp_init.m  ros_init.m  se_init.m  ses_init.m  sim_init.m  targ_init.m  tau_wp_init.m  traj_init.m  wp_init.m  wp_init.m~  wts_init.m
learn_pitch/: model.py  train.py
learn_pitch_fcn/: .gitignore  config_pitch.json  test.py  view_bb_pitches.py
learn_pitch_mlp/: .gitignore  config_pitch.json  convert_bb_corners_to_angle.py  hyperparam_rand_search.py  hyperparam_search.py  hyperparam_search.txt  train.py
learn_pitch_rnn/: data.py  evaluate.py  generate_pose_bounding_boxes.m  train.py
learn_pose/: .gitignore  config_pose.json  hyperparam_grid_search.py  test.py
linearization/: A_calc.m  A_calc_old.m  A_calc_wrench.m  A_ekf_calc.m  B_calc.m  B_calc_old.m  B_calc_wrench.m  C_calc.m  HO_calc.m  H_u_calc.m  H_x_calc.m  H_xu_calc.m  J_u_calc.m  J_x_calc.m  J_x_ekf.m  stagewise_linearizer.m  traj_linearizer.m
maps/: empty.csv  flightroom_easy.csv  flightroom_hard.csv  flightroom_medium.csv  flightroom_wall.csv  flightroom_wall_left.csv  gate_high.csv  single_gate.csv  slit_hard.csv  slit_high.csv
misc/: fout2csv.m  map_con_init.m  quatrot2.m  wrench2motor.m
models/: ang_acc.m  ang_acc_act.m  ang_acc_est.m  contact_func.m  lin_acc.m  lin_acc_act.m  lin_acc_est.m  motor_transform.m  nudge.m  quad_inputs_from_acc.m  quadcopter.m  quadcopter_act.m  quadcopter_est.m  sensors.m  simulation.m  w2m_act.m  w2m_est.m
objective/: obj_init.m
pendulum/: A_calc.m  B_calc.m  C_calc.asv  C_calc.m  C_comp.m  C_indv.m  GN_comp.m  GN_full.m  GN_indv.m  J_calc.m  X_calc.m  data_gen.asv  data_gen.m  dyn_gen.m  param_est.m  performance_exact_initial.fig  performance_noisyexact_initial.fig  test_3.asv  test_3.m  th2xy.m  x_calc.m
plots/: animation_plot.m  animation_plot_dual.m  animation_plot_triple.m  compare_thor.m  debug_plot.m  fast_plot.m  (+18 more)
simulation/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/src/mavros_msgs/: CMakeLists.txt  package.xml
simulation/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/src/mavros_msgs/include/mavros_msgs/: visibility_control.h
simulation/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/src/mavros_msgs/m/+ros/+internal/+ros/+custommessages/+mavros_msgs/: setModeRequest.m
simulation/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/src/mavros_msgs/m/+ros/+msggen/+mavros_msgs/: SetModeRequest.m  SetModeResponse.m  Thrust.m
simulation/ros/custom_msgs/matlab_msg_gen_ros1/glnxa64/src/mavros_msgs/src/: mavros_msgs_ActuatorControl_common.cpp  mavros_msgs_AttitudeTarget_common.cpp  mavros_msgs_CommandBoolRequest_common.cpp  mavros_msgs_CommandBool_request_common.cpp  mavros_msgs_CommandTOLRequest_common.cpp  mavros_msgs_CommandTOLResponse_common.cpp  mavros_msgs_CommandTOL_request_common.cpp  mavros_msgs_SetModeRequest_common.cpp  mavros_msgs_SetModeResponse_common.cpp  mavros_msgs_SetMode_request_common.cpp  mavros_msgs_msg_ActuatorControl_publisher.cpp  mavros_msgs_msg_ActuatorControl_subscriber.cpp  mavros_msgs_msg_AttitudeTarget_subscriber.cpp  mavros_msgs_msg_CommandBoolRequest_publisher.cpp  mavros_msgs_msg_CommandBoolRequest_subscriber.cpp  mavros_msgs_msg_CommandBoolResponse_subscriber.cpp  mavros_msgs_msg_CommandTOLResponse_publisher.cpp  mavros_msgs_msg_CommandTOLResponse_subscriber.cpp  mavros_msgs_msg_SetModeRequest_publisher.cpp  mavros_msgs_msg_SetModeResponse_publisher.cpp  mavros_msgs_msg_Thrust_subscriber.cpp  mavros_msgs_srv_CommandTOL_server.cpp  mavros_msgs_srv_SetMode_client.cpp
(+12894 files in other folders)
